# fix_parser

./: CMakeLists.txt  COPYING  README.md  README.mediawiki  build.sh  build_test.sh  build_vs10.bat  build_vs10_test.bat
bind/: build.sh  build_test.sh  build_vs10.bat  build_vs10_test.bat
bind/erlang/fix_parser/: rebar  rebar.config
bind/erlang/fix_parser/c_src/: fix_parser.c
bind/erlang/fix_parser/c_str/: build_lib.sh
bind/erlang/fix_parser/include/: fix_fields.hrl  fix_parser.hrl
bind/erlang/fix_parser/src/: fix_parser.app.src  fix_parser.erl  fix_parser_app.erl  fix_parser_sup.erl
bind/python/: example.py  fix_fields.py  fix_parser.py
docs/: fix_parser.xml
docs/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  fix__descr__xsd_8h.html  fix__descr__xsd_8h_source.html  fix__error_8c.html  fix__error_8h.html  fix__error_8h_source.html  fix__error__priv_8c.html  fix__error__priv_8h.html  fix__error__priv_8h_source.html  fix__field_8c.html  fix__field_8h.html  fix__field_8h_source.html  fix__field__tag_8h.html  fix__field__tag_8h_source.html  fix__msg_8c.html  fix__msg_8h.html  fix__msg_8h_source.html  fix__msg__priv_8c.html  fix__msg__priv_8h.html  fix__msg__priv_8h_source.html  fix__page_8h.html  fix__page_8h_source.html  fix__parser_8c.html  fix__parser_8h.html  fix__parser_8h_source.html  fix__parser__dll_8h.html  fix__parser__dll_8h_source.html  fix__parser__priv_8c.html  fix__parser__priv_8h.html  fix__parser__priv_8h_source.html  fix__protocol__descr_8c.html  fix__protocol__descr_8h.html  fix__protocol__descr_8h_source.html  fix__types_8c.html  fix__types_8h.html  fix__types_8h_source.html  (+40 more)
docs/html/search/: all_64.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6d.js  all_6f.js  all_70.js  all_73.js  all_74.js  all_75.js  all_76.js  classes_66.js  defines_65.js  defines_66.js  defines_70.js  enums_66.js  enumvalues_66.js  files_66.js  functions_66.js  functions_69.js  functions_73.js  search.js  typedefs_66.js  variables_61.js  variables_62.js  variables_63.js  variables_65.js  variables_66.js  variables_6e.js  variables_70.js  variables_73.js  variables_74.js  variables_76.js
fix_descr/: fix.4.2.xml  fix.4.3.xml  fix.4.4.perf.xml  fix.5.0.sp1.xml  fix.5.0.sp2.xml  fix.5.0.xml  fix42.xml  fix44.xml  fixt.1.1.xml
include/: fix_error.h  fix_field_tag.h  fix_message.h  fix_mpool.h  fix_msg.h  fix_page.h  fix_parser.h  fix_parser_dll.h  fix_parser_priv.h  fix_protocol_descr.h  fix_tag.h  fix_types.h  fix_utils.h  utils.h
perf_test/: CMakeLists.txt  perf_test.c  while.c
src/: fix_descr_xsd.h  fix_error.c  fix_error_priv.c  fix_error_priv.h  fix_field.c  fix_field.h  fix_message.c  fix_message_priv.h  fix_mpool.c  fix_msg.c  fix_msg_priv.c  fix_msg_priv.h  fix_page.h  fix_parser.c  fix_parser_priv.c  fix_parser_priv.h  fix_protocol_descr.c  fix_protocol_descr.h  fix_tag.c  fix_tag.h  fix_types.c  fix_utils.c  fix_utils.h  tag.c
src/lin/: fix_utils.c
src/win/: fix_utils.c
test/: CMakeLists.txt  fix_field_tests.c  fix_field_tests.cc  fix_msg_tests.c  fix_msg_tests.cc  fix_parser_priv_tests.cc  fix_parser_tests.c  fix_parser_tests.cc  fix_parser_tests2.c  fix_parser_tests2.cc  fix_protocol_tests.c  fix_protocol_tests.cc  fix_tag_tests.c  fix_utils_tests.c  fix_utils_tests.cc  main.c  main.cc  test.c
test/data/: fix1.xml  fixt1.xml
test/test_data/: fix2.xml
